--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 
   <div id="container">
     <div id="dsplay">
-      00:00:00:00
+        00:00:00:00
+    </div>
+    <div id="controls">
+       <button>Start</button>
+       <button>Stop</button>
+       <button>Restart</button>
     </div>
   </div>
 
