--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
   <div id="container">
     <div id="dsplay">
-        00:00:00:00
+      00:00:00:00
     </div>
     <div id="controls">
-       <button>Start</button>
-       <button>Stop</button>
-       <button>Restart</button>
+       <button id="startBtn" onclick="start()">Start</button>
+       <button id="stopBtn" onclick="stop()">Stop</button>
+       <button id="resetBtn" onclick="reset()">Restart</button>
     </div>
   </div>
 
@@ -25,3 +25,4 @@
     
 </body>
 </html>
+
