--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="controls">
        <button id="startBtn" onclick="start()">Start</button>
        <button id="stopBtn" onclick="stop()">Stop</button>
-       <button id="resetBtn" onclick="reset()">Restart</button>
+       <button id="resetBtn" onclick="reset()">Reset</button>
     </div>
   </div>
 
